Correcciones de sintaxis
